tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax03/Test.java


public class Test {

	public interface _ {
		
	}
	
	public static void main(String[] args) {
		
    }
	
	
}